--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/parallax": "^9.7.5",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
