--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
