--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.2",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.0"
