--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.1.5",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.2",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.0",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
+    "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
