--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-query": "^5.72.2",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
