--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
