--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-calendar-heatmap": "^1.10.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
