--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.72.2",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-text-align": "^2.24.2",
     "@tiptap/extension-underline": "^2.24.2",
     "@tiptap/react": "^2.24.2",
     "@tiptap/starter-kit": "^2.24.2",
