--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns-tz": "^3.2.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.5.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-calendar-heatmap": "^1.10.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.18",
     "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "^18.3.5",
