--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dompurify": "^3.2.6",
     "framer-motion": "^12.5.0",
     "lodash.debounce": "^4.0.8",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-calendar-heatmap": "^1.10.0",
