--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^5.0.1",
-    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.72.2",
     "@tanstack/react-table": "^8.21.3",
@@ -47,17 +46,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.18",
     "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.17.0",
     "eslint_d": "^14.3.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
