--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "recharts": "^2.15.2",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
