--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.15.2",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.0",
