--- a/package.json
+++ b/package.json
@@ -14,6 +14,18 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.72.2",
     "@tanstack/react-table": "^8.21.3",
@@ -22,11 +34,14 @@
     "@tiptap/react": "^2.24.2",
     "@tiptap/starter-kit": "^2.24.2",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.5.0",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.552.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
@@ -42,6 +57,7 @@
     "react-type-animation": "^3.2.0",
     "recharts": "^2.15.2",
     "swiper": "^11.2.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.24.2"
@@ -50,6 +66,7 @@
     "@eslint/js": "^9.17.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^24.10.0",
     "@types/react": "^18.3.18",
     "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "^18.3.5",
@@ -62,6 +79,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^7.0.2"
